Git ignore modified

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # CakePHP specific files #
 ##########################
+/config/.env
+/logs/*
+/tmp/*
 
 # OS generated files #
 ######################
